--- a/docs-src/styles/main.css
+++ b/docs-src/styles/main.css
@@ -17,7 +17,7 @@
   --border: #e2e8f0;
   --shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1);
   --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1);
-  color-scheme: light dark;
+  color-scheme: dark;
 }
 
 /* Dark Theme */
@@ -34,6 +34,7 @@
   --border: #334155;
   --shadow: 0 1px 3px 0 rgb(0 0 0 / 0.5);
   --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.3);
+  color-scheme: dark;
 }
 
 /* Fixes tab button text color in dark theme */
